objects/SVMXC__Service_Order_Line__c.object
<CustomObject>
    <description>Service Order is used to plan, execute and manage Service events for Field and Depot Service activities. In ServiceMax, service orders can be used to manage the entire service delivery process, from creating estimates and quotations, to requesting and receiving parts, to recording usage/consumption, to closure and analysis.</description>
    <fields>
        <fullName>Create_RMA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create RMA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DOA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Part Does Not Function Properly and requires further Action</description>
        <inlineHelpText>Part Does Not Function Properly and requires further Action</inlineHelpText>
        <label>DOA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Detailed_Work_Performed__c</fullName>
        <label>Detailed Work Performed</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Error__c</fullName>
        <label>Errors</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Errors__c</fullName>
        <label>Errors_Deprecated</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Failure_Analysis_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Failure Analysis Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Failure_Code_Second_Level__c</fullName>
        <label>Failure Code Second Level</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Failure_Code__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>27V Path</fullName>
                </value>
                <value>
                    <fullName>Alignment</fullName>
                </value>
                <value>
                    <fullName>Board Level</fullName>
                </value>
                <value>
                    <fullName>Bootup</fullName>
                </value>
                <value>
                    <fullName>bracket</fullName>
                </value>
                <value>
                    <fullName>Burned</fullName>
                </value>
                <value>
                    <fullName>Burnt</fullName>
                </value>
                <value>
                    <fullName>Burnt Cap</fullName>
                </value>
                <value>
                    <fullName>Cap</fullName>
                </value>
                <value>
                    <fullName>Chip</fullName>
                </value>
                <value>
                    <fullName>Contaminated</fullName>
                </value>
                <value>
                    <fullName>Corrosion</fullName>
                </value>
                <value>
                    <fullName>Crack</fullName>
                </value>
                <value>
                    <fullName>Cracked Cap</fullName>
                </value>
                <value>
                    <fullName>C-Stack</fullName>
                </value>
                <value>
                    <fullName>Customer Power</fullName>
                </value>
                <value>
                    <fullName>Damage</fullName>
                </value>
                <value>
                    <fullName>Damaged Cap</fullName>
                </value>
                <value>
                    <fullName>DCB</fullName>
                </value>
                <value>
                    <fullName>Dead on Arrival</fullName>
                </value>
                <value>
                    <fullName>Debug</fullName>
                </value>
                <value>
                    <fullName>Defect</fullName>
                </value>
                <value>
                    <fullName>DIAG</fullName>
                </value>
                <value>
                    <fullName>Diags</fullName>
                </value>
                <value>
                    <fullName>DIMMs</fullName>
                </value>
                <value>
                    <fullName>Down Rev</fullName>
                </value>
                <value>
                    <fullName>EDRAM</fullName>
                </value>
                <value>
                    <fullName>Electrical</fullName>
                </value>
                <value>
                    <fullName>Electronic ID</fullName>
                </value>
                <value>
                    <fullName>Environmental</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Failure_Code_Third_Level__c</fullName>
        <label>Failure Code Third Level</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Failure_Code_Second_Level__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ABIST</fullName>
                </value>
                <value>
                    <fullName>Air Condition</fullName>
                </value>
                <value>
                    <fullName>Alignment</fullName>
                </value>
                <value>
                    <fullName>Art</fullName>
                </value>
                <value>
                    <fullName>B2B</fullName>
                </value>
                <value>
                    <fullName>Broken Latch</fullName>
                </value>
                <value>
                    <fullName>Burn mark</fullName>
                </value>
                <value>
                    <fullName>Burnt</fullName>
                </value>
                <value>
                    <fullName>C107</fullName>
                </value>
                <value>
                    <fullName>C108</fullName>
                </value>
                <value>
                    <fullName>C127</fullName>
                </value>
                <value>
                    <fullName>C128</fullName>
                </value>
                <value>
                    <fullName>C129</fullName>
                </value>
                <value>
                    <fullName>C19</fullName>
                </value>
                <value>
                    <fullName>C19, and C128</fullName>
                </value>
                <value>
                    <fullName>C20, and C39</fullName>
                </value>
                <value>
                    <fullName>C205</fullName>
                </value>
                <value>
                    <fullName>C213</fullName>
                </value>
                <value>
                    <fullName>C34</fullName>
                </value>
                <value>
                    <fullName>C39</fullName>
                </value>
                <value>
                    <fullName>C39, and C40</fullName>
                </value>
                <value>
                    <fullName>C40</fullName>
                </value>
                <value>
                    <fullName>C78</fullName>
                </value>
                <value>
                    <fullName>CDP</fullName>
                </value>
                <value>
                    <fullName>CDP Cable</fullName>
                </value>
                <value>
                    <fullName>Chassis</fullName>
                </value>
                <value>
                    <fullName>Corrosion</fullName>
                </value>
                <value>
                    <fullName>Cracked</fullName>
                </value>
                <value>
                    <fullName>C-stack</fullName>
                </value>
                <value>
                    <fullName>Damage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Failure_Code__c</fullName>
        <label>Failure Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>12V PSU</fullName>
                </value>
                <value>
                    <fullName>24V PSU</fullName>
                </value>
                <value>
                    <fullName>27V PSU</fullName>
                </value>
                <value>
                    <fullName>ART</fullName>
                </value>
                <value>
                    <fullName>B2B Cable</fullName>
                </value>
                <value>
                    <fullName>Back Plane</fullName>
                </value>
                <value>
                    <fullName>Buffer Cable</fullName>
                </value>
                <value>
                    <fullName>Buffer Card</fullName>
                </value>
                <value>
                    <fullName>Cable</fullName>
                </value>
                <value>
                    <fullName>CDP</fullName>
                </value>
                <value>
                    <fullName>Chassis</fullName>
                </value>
                <value>
                    <fullName>Clock Cable</fullName>
                </value>
                <value>
                    <fullName>Cooling</fullName>
                </value>
                <value>
                    <fullName>Cover</fullName>
                </value>
                <value>
                    <fullName>DCC</fullName>
                </value>
                <value>
                    <fullName>Down Rev Part</fullName>
                </value>
                <value>
                    <fullName>Fan</fullName>
                </value>
                <value>
                    <fullName>HDDC</fullName>
                </value>
                <value>
                    <fullName>Interposer</fullName>
                </value>
                <value>
                    <fullName>Logic Board</fullName>
                </value>
                <value>
                    <fullName>LVPSU</fullName>
                </value>
                <value>
                    <fullName>MBS Box</fullName>
                </value>
                <value>
                    <fullName>MBS Cable</fullName>
                </value>
                <value>
                    <fullName>MCM</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>NCC</fullName>
                </value>
                <value>
                    <fullName>NMP</fullName>
                </value>
                <value>
                    <fullName>OCA</fullName>
                </value>
                <value>
                    <fullName>OTHER</fullName>
                </value>
                <value>
                    <fullName>PDU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Failure_Log__c</fullName>
        <label>Failure Log</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HFE_Resolution__c</fullName>
        <label>HFE Resolution</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IP_Serial_Number_Out__c</fullName>
        <description>Failed Installed product removed from System</description>
        <inlineHelpText>Failed Installed product removed from System</inlineHelpText>
        <label>IP Serial Number Out</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Part_SN_In__c</fullName>
        <label>SN IN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Non_Serialized_Part_In__c</fullName>
        <label>Non Serialized Part In</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Non_Serialized_Part_Out__c</fullName>
        <label>Non Serialized Part Out</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>Test Work Detail Notes</description>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Old_Part_SN_Out__c</fullName>
        <label>SN Out</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <label>Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_Description__c</fullName>
        <inlineHelpText>This is for use with Products that are not listed in the system</inlineHelpText>
        <label>Part Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Problem_Description__c</fullName>
        <label>Problem Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product_Number__c</fullName>
        <formula>SVMXC__Product__r.Product_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Resolution_Code__c</fullName>
        <label>Resolution Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Power cycle</fullName>
                </value>
                <value>
                    <fullName>NCC Reboot</fullName>
                </value>
                <value>
                    <fullName>Configmgr reset</fullName>
                </value>
                <value>
                    <fullName>FW upgrade</fullName>
                </value>
                <value>
                    <fullName>Patch/Hotfix</fullName>
                </value>
                <value>
                    <fullName>Replaced</fullName>
                </value>
                <value>
                    <fullName>Reseated</fullName>
                </value>
                <value>
                    <fullName>Repaired</fullName>
                </value>
                <value>
                    <fullName>Environment Problem Resolved (cooling / power)</fullName>
                </value>
                <value>
                    <fullName>Reinstall</fullName>
                </value>
                <value>
                    <fullName>Replace Host</fullName>
                </value>
                <value>
                    <fullName>Not reproducible</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Markout</fullName>
                </value>
                <value>
                    <fullName>Unresolved</fullName>
                </value>
                <value>
                    <fullName>FPGA Reload</fullName>
                </value>
                <value>
                    <fullName>Host Reboot</fullName>
                </value>
                <value>
                    <fullName>Reimaged</fullName>
                </value>
                <value>
                    <fullName>Upgraded</fullName>
                </value>
                <value>
                    <fullName>Configured</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>re-calibrated coolant level sensor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rev__c</fullName>
        <label>Rev</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Activity_Type__c</fullName>
        <description>Indicates the type of activity performed. Usually applicable for labor line types.</description>
        <inlineHelpText>Indicates the type of activity performed. Usually applicable for labor line types.</inlineHelpText>
        <label>Activity Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Calibration</fullName>
                </value>
                <value>
                    <fullName>Cleanup</fullName>
                </value>
                <value>
                    <fullName>Installation</fullName>
                </value>
                <value>
                    <fullName>Repair</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                    <default>true</default>
                    <label>Service</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Actual_Price2__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Unit price for this line</description>
        <inlineHelpText>Unit price for this line</inlineHelpText>
        <label>Line Price Per Unit</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SVMXC__Actual_Quantity2__c</fullName>
        <description>Number of units consumed. This is context-sensitive based on line type.</description>
        <inlineHelpText>Number of units consumed. This is context-sensitive based on line type.</inlineHelpText>
        <label>Line Qty</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Applied_Rate_Type__c</fullName>
        <label>Applied Rate Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Flat Rate</fullName>
                </value>
                <value>
                    <fullName>Per Hour</fullName>
                </value>
                <value>
                    <fullName>Markup %</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Billable_Line_Price__c</fullName>
        <description>Total price for this parts/labor/expense/travel line considering discount% and covered%</description>
        <inlineHelpText>Total price for this parts/labor/expense/travel line</inlineHelpText>
        <label>Billable Line Price</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SVMXC__Billable_Quantity__c</fullName>
        <description>Quantity of part, time, expenses or travel that needs to be invoiced. This is context-sensitive. For example: Quantity for Travel expense might be 500 (miles)</description>
        <inlineHelpText>Quantity of part, time, expenses or travel that needs to be invoiced. This is context-sensitive. For example: Quantity for Travel expense might be 500 (miles)</inlineHelpText>
        <label>Billable Qty</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Billing_Information__c</fullName>
        <description>States how &quot;Get Price&quot; functionality arrived with the billable line price for the line.</description>
        <inlineHelpText>States how &quot;Get Price&quot; functionality arrived with the billable line price for the line.</inlineHelpText>
        <label>Billing Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SVMXC__Canceled_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User that canceled this parts request. This is set automatically when a user cancels a parts request.</description>
        <inlineHelpText>User that canceled this parts request. This is set automatically when a user cancels a parts request.</inlineHelpText>
        <label>Canceled By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Service_Order_Line_Canceled_By</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Canceled_On__c</fullName>
        <description>Date/time when this service order parts request was canceled. This is set automatically when a user cancels a parts request.</description>
        <inlineHelpText>Date/time when this service order parts request was canceled. This is set automatically when a user cancels a parts request.</inlineHelpText>
        <label>Canceled On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__Closed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User that closed the service order line. This is set automatically when parts are received.</description>
        <inlineHelpText>User that closed the service order line. This is set automatically when parts are received.</inlineHelpText>
        <label>Closed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Service_Order_Line_Closed_By</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Closed_On__c</fullName>
        <description>Date/time when this service order line was closed. This is set automatically when parts are received.</description>
        <inlineHelpText>Date/time when this service order line was closed. This is set automatically when parts are received.</inlineHelpText>
        <label>Closed On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__Consumed_From_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Location from which inventory was consumed. Link to an existing site record in ServiceMax</description>
        <inlineHelpText>Location from which inventory was consumed. Link to an existing site record in ServiceMax</inlineHelpText>
        <label>Consumed From Location</label>
        <referenceTo>SVMXC__Site__c</referenceTo>
        <relationshipName>Service_Order_Line_Cons_Loc</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Cost_Category__c</fullName>
        <description>Type of costing applied to calculate the actual line price</description>
        <inlineHelpText>Type of costing applied to calculate the actual line price</inlineHelpText>
        <label>Cost Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Straight</fullName>
                </value>
                <value>
                    <fullName>Double Time</fullName>
                </value>
                <value>
                    <fullName>Time and a half</fullName>
                </value>
                <value>
                    <fullName>After Hours</fullName>
                </value>
                <value>
                    <fullName>On Call</fullName>
                </value>
                <value>
                    <fullName>Travel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Covered__c</fullName>
        <label>Covered %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SVMXC__Date_Received__c</fullName>
        <description>Date when this product was actually received (Last receipt date if multiple receipts are made)</description>
        <inlineHelpText>Date when this product was actually received. Use last receipt date if multiple receipts are made for the same request.</inlineHelpText>
        <label>Date Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SVMXC__Date_Requested__c</fullName>
        <description>Date when this product is required at the field/target location.</description>
        <inlineHelpText>Date when this product is required at the field/target location.</inlineHelpText>
        <label>Date Required</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SVMXC__Dead_Time__c</fullName>
        <description>The time spent on non-service activities (In Minutes). Applies only on labor lines.</description>
        <label>Dead Time (In Minutes)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Discount__c</fullName>
        <description>Work Order Line Discount Percentage</description>
        <inlineHelpText>Work Order Line Discount Percentage</inlineHelpText>
        <label>Discount %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SVMXC__End_Date_and_Time__c</fullName>
        <description>End date and time if the line type is Labor</description>
        <inlineHelpText>End date and time if the line type is Labor</inlineHelpText>
        <label>End Date and Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__Entitlement_Notes__c</fullName>
        <label>Entitlement Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SVMXC__Estimated_Price2__c</fullName>
        <description>Total estimated price for this parts/labor/expense line</description>
        <inlineHelpText>Total estimated price for this parts/labor/expense line</inlineHelpText>
        <label>Estimated Price Per Unit</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SVMXC__Estimated_Quantity2__c</fullName>
        <description>Quantity of part, time or expenses to be used. This is context-sensitive. For example: Quantity for Travel expense might be 500 (miles)</description>
        <inlineHelpText>Quantity of part, time or expenses to be used. This is context-sensitive. For example: Quantity for Travel expense might be 500 (miles)</inlineHelpText>
        <label>Estimated Qty</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Expense_Type__c</fullName>
        <description>Type of expense likely to be incurred, if the line type is Expenses</description>
        <inlineHelpText>Type of expense likely to be incurred, if the line type is Expenses</inlineHelpText>
        <label>Expense Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Airfare</fullName>
                </value>
                <value>
                    <fullName>Entertainment</fullName>
                </value>
                <value>
                    <fullName>Food - Breakfast</fullName>
                </value>
                <value>
                    <fullName>Food - Lunch</fullName>
                </value>
                <value>
                    <fullName>Food - Dinner</fullName>
                </value>
                <value>
                    <fullName>Gas</fullName>
                </value>
                <value>
                    <fullName>Lodging</fullName>
                </value>
                <value>
                    <fullName>Mileage</fullName>
                </value>
                <value>
                    <fullName>Miscellaneous</fullName>
                </value>
                <value>
                    <fullName>Parking</fullName>
                </value>
                <value>
                    <fullName>Parts</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Rental Car</fullName>
                </value>
                <value>
                    <fullName>Tolls</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__From_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Source Location for which parts are requested</description>
        <inlineHelpText>From Location</inlineHelpText>
        <label>From Location</label>
        <referenceTo>SVMXC__Site__c</referenceTo>
        <relationshipName>Service_Order_Line_From_Loc</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Group_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the service group member if the Log Against is set to Group Member. Is a lookup to an existing group member in ServiceMax</description>
        <inlineHelpText>Name of the service group member if the Log Against is set to Group Member. Is a lookup to an existing group member in ServiceMax</inlineHelpText>
        <label>Technician/Equipment</label>
        <referenceTo>SVMXC__Service_Group_Members__c</referenceTo>
        <relationshipName>Service_Order_Line</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Include_in_Quote__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates if this expense is covered by a warranty/contract, or should be quoted to customer for approval</description>
        <inlineHelpText>Indicates if this expense is covered by a warranty/contract, or should be quoted to customer for approval</inlineHelpText>
        <label>Include in Quote</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Is_Billable__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates if this usage/consumption is billable to the customer</description>
        <inlineHelpText>Indicates if this usage/consumption is billable to the customer</inlineHelpText>
        <label>Is Billable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Is_Entitlement_Performed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Entitlement Performed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Line_Status__c</fullName>
        <description>Service Order Line Status.</description>
        <inlineHelpText>Service Order Line Status.</inlineHelpText>
        <label>Line Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Line_Type__c</fullName>
        <description>Indicates the type of usage: Parts, Labor or Expenses</description>
        <label>Line Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Parts</fullName>
                </value>
                <value>
                    <fullName>Labor</fullName>
                </value>
                <value>
                    <fullName>Expenses</fullName>
                </value>
                <value>
                    <fullName>Travel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Log_Against__c</fullName>
        <description>For internal accounting purposes, indicate if this expense/activity is tracked at the service group level or at the group member level</description>
        <inlineHelpText>For internal accounting purposes, indicate if this expense/activity is tracked at the service group level or at the group member level</inlineHelpText>
        <label>Log Against</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Service Team</fullName>
                </value>
                <value>
                    <fullName>Technician/Equipment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Posted_To_Inventory__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if quantity from this service order line has been posted to inventory or not. This is applicable for Part Requests and Usage/Consumption records in a service order.</description>
        <inlineHelpText>Indicates if quantity from this service order line has been posted to inventory or not. This is applicable for Part Requests and Usage/Consumption records in a service order.</inlineHelpText>
        <label>Posted To Inventory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Product_Warranty__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Warranty</label>
        <referenceTo>SVMXC__Warranty__c</referenceTo>
        <relationshipName>Work_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the product estimated, requested or used. Is a lookup to an existing salesforce product record</description>
        <inlineHelpText>Name of the product estimated, requested or used. Is a lookup to an existing salesforce product record</inlineHelpText>
        <label>Part</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>Service_Order_Line</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>